mikec/tests/PASS/operators/68.mc
/* Multiply ints and floats. */
void main()
{
	int a = 2;
	float b = 8.2;
	float c = a*b;
}