mikec/tests/FAIL/arithmetic/4.mc
/* Subtract int and char */
void main()
{
	int a = 2;
	char b = 'b';
	int c = a-b;
}